syntax = "proto3";

option java_package = "org.franwork.studio.grpc.sample.helloworld";
option java_outer_classname = "HelloWorldProto";

import "route_guide.proto";

service Greeter {

    rpc SayHello(HelloRequest) returns (HelloReply) {}

    rpc SayHelloStreaming (stream HelloRequest) returns (stream HelloReply) {}

    rpc SayHelloByPoint(Point) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}